# BassEffect

./: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Compressor.cpp  Compressor.h  Overdrive.cpp  Overdrive.h  README.md  ToneTester.cpp  ToneTester.h  UserInterface.cpp  UserInterface.h  main.cpp
